src/FinancialForce ERP Core/objects/ErpMessagingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>LoggingLevel__c</fullName>
        <defaultValue>&quot;Errors&quot;</defaultValue>
        <label>Logging Level</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueryBuilderMaximumLookdowns__c</fullName>
        <label>Query Builder Maximum Lookdowns</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QueryBuilderMaximumLookupDepth__c</fullName>
        <label>Query Builder Maximum Lookup Depth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QueryBuilderMaximumRelationships__c</fullName>
        <label>Query Builder Maximum Relationships</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ERP Messaging Settings</label>
</CustomObject>